--- a/client.html
+++ b/client.html
@@ -19,6 +19,7 @@
             var MUTE_AUDIO_BY_DEFAULT = false;
             var CHANNELS = [];
             var NAMES = {};
+            var NAME = "Noob user";
             var ICE_SERVERS = [
                 {url:"stun:stun.l.google.com:19302"}
             ];
@@ -57,7 +58,7 @@
                     if (isJSON(menu[i])) {
                         add = "<li><span id='channel_"+menu[i].id+"' onclick='join_chat_channel("+menu[i].id+")'>"+menu[i].name+"</span><ul id='channelmenu_"+menu[i].id+"'>"
                         for (var j = 0; j < menu[i].sockets.length; j++) 
-                            add += "<li>"+menu[i].sockets[j]+"</li>"
+                            add += "<li>"+NAMES[menu[i].sockets[j]]+"</li>"
                         add += "</ul></li>"; 
                         if (menu[i].father !== null) 
                             $('#channelmenu_'+menu[i].father).append(add)
@@ -85,7 +86,7 @@
                         local_media.attr("muted", "true"); /* always mute ourselves by default */
                         local_media.attr("controls", "");
                         local_media.attr('id', "myAudio");
-                        $('body').append("Me :<br><div id='myInterface'><input type='button' id='muteButton' onclick='toggleMyStream()' value='Mute'><br>");
+                        $('body').append("Me :<br><div id='myInterface'><input type='button' id='muteButton' onclick='toggleMyStream()' value='Mute'><input type='button' id='changeNameButton' onclick='change_name()' value='Changer de nom'><br>");
                         $('#myInterface').append(local_media);
                         $('body').append('<br>Others :<br>');
                         attachMediaStream(local_media[0], stream);
@@ -103,6 +104,7 @@
                 setup_local_media(function() {
                     signaling_socket = io.connect(SIGNALING_SERVER);
                     signaling_socket.on('connect', function() {
+                        signaling_socket.emit('changeName', NAME);
                         console.log("Connected to signaling server");
                     });
                     signaling_socket.on('disconnect', function() {
@@ -136,12 +138,14 @@
                     signaling_socket.on('listNames', function(names) {
                         if (! _.isEqual(names, NAMES)) {
                             NAMES = names;
+                            $('#listChannels').empty();
+                            create_menu(CHANNELS);
                         }
                     })
-                    function getListChannels() {
-                        signaling_socket.emit('getListChannels');
+                    function getListChannelsAndNames() {
+                        signaling_socket.emit('getListChannelsAndNames');
                     }
-                    getListChannelsInterval = setInterval(getListChannels, 200)
+                    getListChannelsAndNamesInterval = setInterval(getListChannelsAndNames, 200)
 
                     /** 
                     * When we join a group, our signaling server will send out 'addPeer' events to each pair
@@ -315,9 +319,26 @@
                     
                 }
             }
+
+            function change_name() {
+                name = prompt('Entrez votre pseudo');
+                if (name) {
+                    NAME = name;
+                    signaling_socket.emit('changeName', NAME);
+                }
+            }
+
+            function start_name() {
+                name = prompt('Entrez votre pseudo');
+                if (name) {
+                    NAME = name;
+                    init()
+                } else start_name()
+            }
+
         </script>
     </head>
-    <body onload='init()'>
+    <body onload='start_name()'>
         <div id="listChannelsDiv"><ul id="listChannels"></ul></div>
         <!-- 
         the <video> and <audio> tags are all added and removed dynamically
