--- a/client.html
+++ b/client.html
@@ -182,7 +182,7 @@
                                 $('#chatContent').append("<span>["+timestampToTime(msg.date)+"] <b>"+NAMES[msg.author_id]+"</b> : "+msg.content+"</span><br>");
                                 break;
                             case "privateOut":
-                                $('#chatContent').append("<span>["+timestampToTime(msg.date)+"] To <b>"+NAMES[msg.receiver_id]+"</b> : "+msg.content+"</span><br>");
+                                $('#chatContent').append("<span>["+timestampToTime(msg.date)+"] To <b>"+NAMES[msg.receiver_id.from(2)]+"</b> : "+msg.content+"</span><br>");
                                 break;
                             default:
                                 break;
