feature/chat: test on chat

--- a/client.html
+++ b/client.html
@@ -182,6 +182,8 @@
                                 $('#chatContent').append("<span>["+timestampToTime(msg.date)+"] <b>"+NAMES[msg.author_id]+"</b> : "+msg.content+"</span><br>");
                                 break;
                             case "privateOut":
+                                console.log(msg.receiver_id);
+                                console.log(NAMES[receiver_id]);
                                 $('#chatContent').append("<span>["+timestampToTime(msg.date)+"] To <b>"+NAMES[msg.receiver_id]+"</b> : "+msg.content+"</span><br>");
                                 break;
                             default:
